conferuns-yedek/conferuns-elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conferuns-elasticsearch
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
          es: yess
  template:
    metadata:
      labels:
          es: yess
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: elasticsearch
        image: elasticsearch:5.6.13
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data/
        resources:
            requests:
                memory: "4096Mi"
                cpu: "200m"
            limits:
                memory: "4096Mi"
                cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: conferuns-elasticsearch
  namespace: default
spec:
  selector:
      es: yess
  ports:
  - port: 9200
    name: http
    protocol: TCP
  - port: 9300
    name: transport
    protocol: TCP
