conferuns-yedek/conferuns-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conferuns
  namespace: default
  labels:
    app: conferuns
spec:
  selector:
    app: conferuns
  type: ClusterIP
  ports:
  - name: http
    port: 8081
