conferuns-yedek/conferuns-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conferuns
  namespace: default
spec:
  rules:
  - host: conferuns.urla.io
    http:
      paths:
      - path: /
        backend:
          serviceName: conferuns
          servicePort: 8081
  - host: mysql.urla.io
    http:
        paths:
            - path: /
              backend:
                  serviceName: mysql-service
                  servicePort: 3306
  - host: elastic.urla.io
    http:
        paths:
            - path: /
              backend:
                  serviceName: conferuns-elasticsearch
                  servicePort: 9200
